--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ html {
     display: block;
   }
   
-  input {
+  .quantity-input {
     max-width: 2rem;
     margin: 0;
     padding: 0.75rem 0;
@@ -94,3 +94,8 @@ html {
     opacity: 0.5;
   }
   /*QUANITY BUTTON*/
+      
+
+footer {
+    background-color: #4CC1D9;
+}
